<resources>
    <string name="app_name">Haasya Dental Care</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">haasyadental</string>
    <string name="nav_header_subtitle">haasyadental@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_services">Services</string>
    <string name="menu_doctores">Doctores</string>
    <string name="menu_mission">Mission</string>
    <string name="menu_review">Review</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about">About Us</string>
    <string name="todo">TODO</string>
    <string name="title_activity_service_view">ServiceView</string>

    <string name="about_description">The clinic aims at offering different specialities of dentistry
                                        like cosmetic dentistry and restorative dentistry, orthodontics,
                                        endodontics, periodontics, prosthodontics and dental implants all
                                        under one roof.  At our clinic we utilize the latest in dental
                                        techniques and technology to make your dental visit as painless and
                                        comfortable as possible.  Our state of the art dental practice is
                                        also staffed by a dedicated team of specialised dental surgeons and
                                        highly trained dental professionals committed to the highest standards
                                        of excellence.  The combination of competent and experienced staff and
                                        advanced technologies assure you the best oral hygiene and good care</string>
    <string name="clinic_service">Clinic Service</string>
</resources>
